<resources>
    <string name="app_name">AndroidDemos</string>
    <string name="go_login">去登录…</string>
    <string name="third_sdk">第三方 SDK 接入</string>

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="exit_tip">再按一次退出程序.</string>


    <string name="token_test">Token Test</string>
    <string name="request_api">请求 API</string>
    <string name="get_token">获取 Token</string>
    <string name="recycler_single_multiple">RecyclerView 单选和多选</string>
    <string name="single_selection">RecyclerView Single Selection</string>
    <string name="multiple_selection">RecyclerView Multiple Selection</string>
    <string name="dialog">弹出框</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="show_time_picker">展示时间选择器</string>
    <string name="show_dialog">展示弹出框</string>
    <string name="show_loading">显示加载框</string>
    <string name="show_tip">显示状态提示框</string>
    <string name="hand_signature">手写签名</string>
    <string name="pdf_generate">生成 PDF</string>
    <string name="signature_clear">清除</string>
    <string name="signature_save">保存</string>
    <string name="picture_selector">图片选择器</string>
    <string name="iflytek_sdk">科大讯飞 SDK 功能</string>
    <string name="baidu_ai">百度平台 AI 实践</string>
    <string name="app_let_go_drag_delete">松手即可删除</string>
    <string name="app_drag_delete">拖动到此处删除</string>


    <!--科大讯飞-->
    <string name="app_id">5c749818</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传联系人/词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>

    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <string name="face_model_delete">人脸模型删除</string>

    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>


    <!-- 合成 -->
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，痴，是"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string name="example_explain_wake">唤醒是指通过说出特定的唤醒词来唤醒处于休眠状态下的设备，又分为唤醒和唤醒+识别。</string>
    <string name="wake_demo_hint">请点击“开始唤醒”后读出您在开放平台购买的唤醒词，当引擎计算得分大于您设置的门限值时，即可进行唤醒。</string>
    <string name="oneshot_demo_hint">请点击“唤醒+识别”后读出您在开放平台购买的唤醒词+语法中指定的识别对象，当引擎计算得分大于您设置的门限值时，即可进行唤醒+识别。</string>
    <!-- 语言 -->
    <string name="oneshot_resource_hint">本示例识别词语为“张三|李四|张海洋”，请开发者将语法文件中的唤醒词字段替换，本地语法定义详见demo工程的asset/wake.bnf文件。</string>
    <string name="all_supplement_model">里程补偿方式:</string>
    <!-- 语音评测 -->
    <string name="all_coord_type">坐标类型:</string>
    <string name="all_cancel">取消</string>
    <string name="all_sure">确定</string>
    <string name="all_fence_operate">围栏操作</string>
    <string name="no_supplement">不补充</string>
    <string name="straight">直线距离</string>
    <string name="driving">最短驾车路线</string>
    <string name="riding">最短骑行路线</string>
    <string name="walking">最短步行路线</string>
    <string name="bd09ll">百度经纬度坐标</string>
    <!-- 标点符号 -->
    <string name="gcj02">国测局加密坐标</string>
    <string name="base_title">BaseActivity</string>
    <string name="login_title">LoginActivity</string>

    <!-- 语言 -->
    <string name="tracing_title">轨迹追踪</string>
    <string name="tracing_options_title">追踪设置</string>

    <!-- 唤醒 -->
    <string name="track_query_title">轨迹查询</string>
    <string name="track_query_options_title">查询设置</string>
    <string name="fence_title">地理围栏</string>
    <string name="bos_title">图片服务</string>
    <string name="video_player">视频播放(饺子视频)</string>
    <string name="imitate_fish_page">仿闲鱼发布页面</string>
    <string name="open_page">打开Dialog</string>
    <string name="eagle_track">百度鹰眼轨迹</string>

    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>

    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>

    <!--科大讯飞-->

    <string-array name="machine_entries">
        <item>鲁谷</item>
        <item>广州</item>
        <item>森华</item>
    </string-array>

    <string-array name="machine_values">
        <item>http://bj.voicecloud.cn/msp.do</item>
        <item>http://gz.voicecloud.cn/msp.do</item>
        <item>http://dx.xf-yun.com/msp.do</item>
    </string-array>

    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>

    <!-- 查询围栏提示信息-->
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>

    <!-- 报警通知标题 -->
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- CacheManageActivity 选项 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>

    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>

    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>

    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>

    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>

    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>

    <!-- 对象（图片）操作提示信息-->
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>


    <string name="font_type">微软雅黑</string>
    <string name="start_trace">开启服务</string>
    <string name="start_gather">开启采集</string>
    <string name="stop_trace">停止服务</string>
    <string name="stop_gather">停止采集</string>
    <string name="tracing_option_interval">采集、打包频率(单位:秒):</string>
    <string name="gather_interval">采集频率：</string>
    <string name="gather_interval_hint">5</string>
    <string name="pack_interval">打包频率：</string>
    <string name="pack_interval_hint">5</string>
    <string name="tracing_option_location_mode">定位模式：</string>
    <string name="device_sensors">仅使用设备(GPS)定位</string>
    <string name="battery_saving">低功耗定位模式，仅使用网络定位</string>
    <string name="high_accuracy">高精度定位模式，GPS与网络综合定位</string>
    <string name="no_track_data">未查询到轨迹</string>
    <string name="track_query_option_time">起止时间：</string>
    <string name="track_query_option_process">纠偏与数据分析：</string>
    <string name="processed">纠偏</string>
    <string name="denoise">去噪</string>
    <string name="vacuate">抽稀</string>
    <string name="mapmatch">绑路</string>
    <string name="track_query_option_radius_threshold">精度过滤(单位：米)</string>
    <string name="radius_value">过滤值：</string>
    <string name="radius_hint">0</string>
    <string name="start_time">开始：</string>
    <string name="end_time">结束：</string>
    <string name="track_back_title">轨迹回放</string>
    <string name="process_node">流程节点图</string>
    <string name="preferencescreen">测试 PreferenceScreen 功能</string>
    <string name="take_photo">拍照</string>
    <string name="basic_controls">基础控件</string>
    <string name="hello_charts">HelloCharts展示</string>
    <string name="open_banner">Banner 效果</string>

</resources>
