<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_12"
    tools:context=".function_summary.time_picker.TimePickerTestActivity">

    <Button
        android:id="@+id/show_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_time_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_picker" />

    <Button
        android:id="@+id/show_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_loading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_dialog" />

    <Button
        android:id="@+id/show_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>